--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css\style.css">
     <title>E-commerce Shoes</title>
   </head>
+<!-- CIAO  -->
+
 
   <!-- prova federica -->
   <body>
