--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css\style.css">
     <title>E-commerce Shoes</title>
-  </head>
+</head>
 
-  <!-- prova federica -->
-  <body>
+<!-- prova federica -->
+
+<body>
     <header>
-      <nav class="navigator">
-        <ul class="menu">
-          <li><a href="#scarpa1">1</a></li>
-          <li><a href="#scarpa2">2</a></li>
-          <li><a href="#scarpa3">3</a></li>
-        </ul>
-      </nav>
-  </header>
+        <nav class="navigator">
+            <ul class="menu">
+                <li><a href="#scarpa1">1</a></li>
+                <li><a href="#scarpa2">2</a></li>
+                <li><a href="#scarpa3">3</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <div id="scarpa1">
-      <div class="box">
-        <img src="img\01.png" alt="n1">
-        <p>Il nostro prodotto <br> di punta</p>
-      </div>
-    </div>
+    <main>
+        <div id="scarpa1">
+            <div class="box">
+                <img src="img\01.png" alt="n1">
+                <p>Il nostro prodotto <br> di punta</p>
+            </div>
+        </div>
 
-    <div id="scarpa2">
-      <div class="box">
-        <img src="img\02.png" alt="n2">
-        <p>Il nostro prodotto <br> di punta</p>
-      </div>
-    </div>
+        <div id="scarpa2">
+            <div class="box">
+                <img src="img\02.png" alt="n2">
+                <p>Il nostro prodotto <br> di punta</p>
+            </div>
+        </div>
 
-    <div id="scarpa3">
-      <div class="box">
-        <img src="img\03.png" alt="n3">
-       <p>Il nostro prodotto <br> di punta</p>
-      </div>
-    </div>
-  </main>
+        <div id="scarpa3">
+            <div class="box">
+                <img src="img\03.png" alt="n3">
+                <p>Il nostro prodotto <br> di punta</p>
+            </div>
+        </div>
+    </main>
 
 </body>
-  <footer></footer>
+<footer></footer>
+
+<!-- BRANCH EDO -->
+
+<h1>Prova di Branch</h1>
+
 </html>
